# draco

draco_trunk/: CMakeLists.txt
draco_trunk/ast_converter/: .gitignore  adatree.adb  adatree.ads  decl.adb  decl.ads  dglobal.ads  dlc.adb  dlc.ads  llvmtree.adb  llvmtree.ads  misc.adb  misc.ads  utils01.adb  utils01.ads
draco_trunk/constructs/: CMakeLists_configure.txt  CMakeLists_libgcc.txt  autohost_i386_freebsd.txt  autohost_i386_solaris2.txt  cm_build_tools.txt  cm_crtstuff.txt  cm_directory.txt  cm_driver.txt  cm_gen_headers.txt  cm_gnat1.txt  cm_gnat1bind.txt  cm_host_specific.txt  cm_insns.txt  cm_libcpp.txt  cm_libdecnumber.txt  cm_libgcc.txt  cm_libgcc_eh.txt  cm_libgcov.txt  cm_libiberty.txt  cm_pregeneration.txt  cm_target_specific.txt  cm_triplets.txt  config.in  config.out
draco_trunk/driver/: commands.adb  commands.ads  draco.adb  dracosystem.adb  dracosystem.ads  dracosystemspecs.ads  dracosystemspecs.tpl  driverswitch.adb  driverswitch.ads  pathinfo.adb  pathinfo.ads  pipemechanism.adb  pipemechanism.ads  switchmap.adb  switchmap.ads
draco_trunk/llvm_c_api/: Core.h  core_h.ads
misc/: build_source_package.php  filter_test_logs.php  gcc_commits_left  patched_files.list
misc/49-diffs/: diff-ada  diff-core  diff-cxx
misc/depend_generator/: dep.gnat1bind.txt  gen_compile_order.php  local.gnat1bind.txt  obj.bind.txt  obj.gnat1.txt
misc/devnotes/: draco_configure_options  draco_switches  gcc_commits_left  patched_files.list
misc/flux10/: patch-gcc_ada_gcc-interface_Make-lang.in  patch-gcc_ada_init.c  patch-libstdc++-v3_config_os_bionic_ctype__base.h
misc/flux11/: patch-gcc_Makefile.in  patch-gcc_ada_cstreams.c  patch-gcc_ada_gcc-interface_Make-lang.in  patch-gcc_ada_libgnat_s-osprim__posix.adb  patch-gcc_ada_s-oscons-tmplt.c  patch-gcc_ada_s-osinte-dragonfly.ads  patch-gcc_ada_s-osinte-freebsd.ads  patch-gcc_ada_sysdep.c  patch-gcc_config_netbsd-elf.h  patch-gcc_configure  patch-gcc_gcc.c  patch-libgcc_config.host
misc/flux12/: patch-gcc_Makefile.in  patch-gcc_ada_gcc-interface_Make-lang.in  patch-gcc_ada_gnatlink.adb  patch-gcc_ada_init.c  patch-gcc_ada_libgnat_g-socthi.ads  patch-gcc_ada_s-oscons-tmplt.c  patch-gcc_ada_s-osinte-android.ads  patch-gcc_ada_sysdep.c  patch-gcc_gcc.cc
misc/flux13/: patch-gcc_Makefile.in  patch-gcc_ada_gcc-interface_Make-lang.in  patch-gcc_ada_s-oscons-tmplt.c  patch-gcc_ada_s-osinte-dragonfly.ads  patch-gcc_configure  patch-gcc_gcc.cc  patch-libstdc++-v3_include_bits_c++config
misc/flux14/: patch-gcc_Makefile.in  patch-gcc_ada_cio.c  patch-gcc_ada_gcc-interface_Make-lang.in  patch-gcc_ada_gnatchop.adb  patch-gcc_ada_init.c  patch-gcc_ada_libgnarl_s-taprop-posix.adb  patch-gcc_ada_make.adb  patch-gcc_ada_s-oscons-tmplt.c  patch-gcc_ada_s-osinte-android.ads  patch-gcc_ada_s-osinte-freebsd.ads  patch-gcc_ada_sysdep.c  patch-gcc_configure  patch-gcc_gcc.cc  patch-gnattools_configure  patch-libssp_ssp.c  patch-libstdc++-v3_configure.host  patch-libstdc++-v3_include_bits_c++config
misc/flux15/: patch-c++tools_Makefile.in  patch-c++tools_configure  patch-gcc_Makefile.in  patch-gcc_ada_cstreams.c  patch-gcc_ada_libgnarl_s-taprop-posix.adb  patch-gcc_ada_libgnat_g-socthi.ads  patch-gcc_ada_libgnat_s-osprim__posix.adb  patch-gcc_ada_s-oscons-tmplt.c  patch-gcc_ada_s-osinte-android.ads  patch-gcc_ada_s-osinte-dragonfly.ads  patch-gcc_ada_s-osinte-freebsd.ads  patch-gcc_ada_sysdep.c  patch-gcc_config.gcc  patch-gcc_config_freebsd-spec.h  patch-gcc_configure  patch-gcc_cp_Make-lang.in  patch-gcc_gcc.cc  patch-gcc_objcp_Make-lang.in  patch-gnattools_configure  patch-libcc1_configure  patch-libstdc++-v3_config_os_bionic_ctype__base.h  patch-libstdc++-v3_configure.host  patch-libstdc++-v3_include_bits_c++config  patch-libstdc++-v3_src_c++11_futex.cc  patch-libstdc++-v3_testsuite_lib_dg-options.exp
misc/flux47/: fix_locales.patch  patch-gcc_ada_gcc-interface_Make-lang.in  patch_configure  patch_gcc_Makefile.in  patch_gcc_configure  patch_libgfortran_configure
misc/flux49/: fix-hong_kong.patch  fix-ja_JP.eucJP.patch  fix-norway.patch  fix-random-locales.patch  gxx_ts1.patch  libstdcxx-testsuite.patch  libstdcxx_section30.patch  patch-gcc_Makefile.in  patch-gcc_ada_gcc-interface_Make-lang.in  patch-gcc_ada_gcc-interface_Makefile.in  patch-gcc_builtins.c  patch-gcc_config.gcc  patch-gcc_configure  patch-gcc_fortran_f95-lang.c  patch-gnattools_configure  patch-gnattools_configure.ac  patch-libcilkrts_runtime_os-unix.c  patch-libgcc_config.host  patch-libgfortran_acinclude.m4  patch-libgfortran_configure  patch-libquadmath_Makefile.in  patch-libstdcpp3_acinclude.m4  patch-libstdcpp3_configure  patch-libstdcpp3_configure.host
misc/flux5/: patch-gcc_Makefile.in  patch-gcc_ada_gcc-interface_Make-lang.in  patch-gcc_ada_gcc-interface_Makefile.in  patch-gcc_config.gcc  patch-gcc_config_i386_netbsd-elf.h  patch-gcc_config_i386_netbsd64.h  patch-gcc_config_netbsd-elf.h  patch-gcc_configure  patch-gnattools_configure  patch-gnattools_configure.ac  patch-libgcc_config.host  patch-libgcc_config_i386_t-dragonfly  patch-libgcc_crtstuff.c  patch-libgcc_unwind-dw2-fde-dip.c  patch-libgfortran_acinclude.m4  patch-libgfortran_configure  patch-libstdc++-v3_configure  patch-libstdc++-v3_configure.host  patch-libstdc++-v3_testsuite_lib_libstdc++.exp
misc/flux6/: patch-configure  patch-gcc_Makefile.in  patch-gcc_ada_a-intnam-netbsd.ads  patch-gcc_ada_gcc-interface_Make-lang.in  patch-gcc_ada_init.c  patch-gcc_ada_s-osinte-netbsd.adb  patch-gcc_ada_s-osinte-netbsd.ads  patch-gcc_ada_sysdep.c  patch-gcc_ada_system-netbsd-x86__64.ads  patch-gcc_config.gcc  patch-gcc_config.host  patch-gcc_config_i386_netbsd-elf.h  patch-gcc_config_i386_netbsd64.h  patch-gcc_config_netbsd-elf.h  patch-gcc_configure  patch-gcc_expmed.c  patch-gcc_fortran_f95-lang.c  patch-gnattools_configure  patch-gnattools_configure.ac  patch-libgcc_config.host  patch-libgcc_config_i386_netbsd-unwind.h  patch-libgcc_crtstuff.c  patch-libgcc_unwind-dw2-fde-dip.c  patch-libgfortran_acinclude.m4  patch-libgfortran_configure
misc/flux7/: patch-dwarf2out.c  patch-gcc_Makefile.in  (+5 more)
(+786 files in other folders)
